<resources>
    <string name="app_name">ByteChat</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_image">login image</string>
    <string name="your_phone_number">Your phone number</string>
    <string name="please_confirm_your_country_code_and_enter_your_phone_number">Please confirm your country code and enter your phone number</string>
    <string name="phone_number">Phone number</string>
    <string name="send_otp">Send OTP</string>
    <string name="enter_your_otp">Enter your OTP</string>
    <string name="verify">Verify</string>
    <string name="search">Search</string>
    <string name="log_out">Log out</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="_12_00">12:00</string>
    <string name="chat_with_anyone">Chat with anyone</string>
    <string name="user_profile_picture">user_profile_picture</string>
    <string name="new_chat">start a new chat</string>
    <string name="contacts">Contacts</string>
    <string name="user">User</string>
    <string name="message">Message</string>
    <string name="received_message">message received</string>
    <string name="send_message_btn">Send a Message</string>
    <string name="update_profile">Update Profile</string>
    <string name="profile_picture">profile picture</string>
    <string name="edit_profile_picture">edit profile picture</string>
    <string name="save">Save</string>
    <string name="navigate_up">navigate up</string>
    <string name="loading">Loading</string>
    <string name="seen">seen</string>
    <string name="sent">sent</string>
    <string name="default_notification_channel_id">admin_channel</string>
    <string name="last_message">You: %1$s</string>
    <string name="settings">Settings</string>
    <string name="source_code">Source Code</string>
    <string name="share_app">Share App</string>
    <string name="yesterday">Yesterday</string>
    <string name="share_app_text">Hey, Let\'s chat on ByteChat App\nDownload the app from here https://drive.google.com/drive/folders/1iqiz6vcvZ6J9kbO10kOYnp9GrfI-Z9Bl</string>
    <string name="repo_link">https://github.com/azmatroshan/ByteChat</string>
    <string name="logout_confirmation">Do you want to log out?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
</resources>