<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/primaryColor"
    tools:context=".login.fragment.LoginFragment">

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/img_login"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/login_image"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/figtree_semi_bold"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="8dp"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:text="@string/your_phone_number"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="25dp"
        android:fontFamily="@font/figtree_regular"
        android:text="@string/please_confirm_your_country_code_and_enter_your_phone_number"
        android:textColor="@color/grey"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center"
        android:layout_margin="25dp">
        <com.hbb20.CountryCodePicker
            android:id="@+id/countryCodePicker"
            android:layout_width="wrap_content"
            app:ccp_autoDetectCountry="true"
            android:background="@drawable/country_code_bg"
            android:layout_height="42dp"
            android:layout_gravity="bottom"
            app:ccp_defaultNameCode="IN" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_marginStart="6dp"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phone_number"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:padding="8dp"
                android:textSize="20sp"
                android:singleLine="true"
                android:maxWidth="200dp"
                android:textColor="@color/black"
                tools:ignore="VisualLintTextFieldSize" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <Button
        android:id="@+id/send_otp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/send_otp"
        tools:ignore="TextContrastCheck" />
</LinearLayout>