<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/primaryColor"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/profile_img"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:layout_margin="12dp"
        android:src="@drawable/img_profile"
        android:contentDescription="@string/user_profile_picture"
        android:background="@drawable/bg_image"
        android:scaleType="centerInside" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_marginEnd="12dp"
        android:layout_marginVertical="12dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:fontFamily="@font/figtree_semi_bold"
            android:textSize="18sp"
            android:ellipsize="marquee"
            android:layout_marginVertical="4dp"
            android:text="@string/app_name" />

        <TextView
            android:id="@+id/last_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:ellipsize="marquee"
            android:layout_marginVertical="4dp"
            android:fontFamily="@font/figtree_regular"
            android:maxLines="1"
            android:text="@string/app_name"/>
    </LinearLayout>

    <TextView
        android:id="@+id/last_seen"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/figtree_regular"
        android:text="@string/_12_00"/>

</LinearLayout>