<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tool s"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/primaryColor"
    tools:context=".ProfileFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/onPrimary"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">
            <ImageView
                android:id="@+id/navigate_up"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:padding="10dp"
                android:src="@drawable/ic_navigate_up"
                android:background="@drawable/click_ripple_circle"
                />

            <TextView
                android:id="@+id/update_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/figtree_semi_bold"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:text="@string/update_profile"/>
        </LinearLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/profileImageView"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/img_profile"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/profile_picture"
        android:scaleType="centerCrop"
        android:background="@color/grey"
        app:layout_constraintStart_toStartOf="parent"
        app:shapeAppearanceOverlay="@style/circularImageViewShape"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/profileImageView"
        app:layout_constraintEnd_toEndOf="@+id/profileImageView"
        android:background="@drawable/bg_icon">
        <ImageView
            android:id="@+id/editImage"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:padding="12dp"
            android:contentDescription="@string/edit_profile_picture"
            android:src="@drawable/ic_camera"
            android:scaleType="centerCrop"
            android:background="@drawable/click_ripple_circle"
            />
    </FrameLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="48dp"
        app:layout_constraintTop_toBottomOf="@+id/profileImageView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="Name"
            android:autofillHints="name"
            android:inputType="textPersonName"
            android:maxWidth="200dp"
            android:padding="12dp"
            android:singleLine="true"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/save_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="48dp"
        android:text="@string/save"
        android:padding="12dp"
        android:textSize="18sp"
        android:layout_marginTop="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameInputLayout" />
</androidx.constraintlayout.widget.ConstraintLayout>